tests/should-fail/semantics/too-many-arguments.j
native Foo takes integer a returns nothing

function test takes nothing returns nothing
    call Foo(1, 2, 3)
endfunction
